--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/IPDBuddy
-spring.datasource.username=postgres
-spring.datasource.password=P@ssw0rd
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/IPDBuddy
+#spring.datasource.username=postgres
+#spring.datasource.password=P@ssw0rd
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
