--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 src/main/resources/firebase-service-account.json
 src/main/resources/application.properties
-.env
+.env.dev
 .env.*
 
 ### STS ###
