--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,10 @@
 #spring.datasource.password=P@ssw0rd
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+
+
+debug=true
+logging.level.org.springframework.security=DEBUG
+spring.flyway.locations=classpath:db/migration,classpath:db/dev-migration
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
