--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ target/
 !**/src/test/**/target/
 src/main/resources/firebase-service-account.json
 src/main/resources/application.properties
+src/main/resources/application-dev.properties
+src/main/resources/application-prod.properties
 .env.dev
 .env.*
 
