--- a/compose.yaml
+++ b/compose.yaml
@@ -17,7 +17,7 @@ services:
       db:
         condition: service_healthy
     environment:
-      SPRING_PROFILE_ACTIVE: dev
+      SPRING_PROFILES_ACTIVE: dev
       SPRING_DATASOURCE_URL: ${SPRING_DATA_SOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
